--- a/style.css
+++ b/style.css
@@ -6,6 +6,15 @@
   --text-color: #c5bbec;
 }
 
+:root {
+  --container: 112rem;
+  --m-auto: 0 auto;
+  --white: #fff;
+  --bg-hero: #251c5a;
+  --bg-counter: #2f2371;
+  --bg-item: #5d46e2;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -51,6 +60,7 @@ ul {
 
 .btn:hover {
   transform: scale(0.98);
+  background-color: #afd3e2;
 }
 
 .primary-text {
@@ -189,4 +199,67 @@ ul {
   .footer ul {
     display: block;
   }
+}
+
+.footer ul a:hover {
+  background-color: #9384d1;
+  border-radius: 5px;
+}
+
+#section_counter {
+  padding: 5rem 0;
+  background: var(--bg-counter);
+}
+#section_counter .section-heading {
+  padding-bottom: 5rem;
+  text-align: center;
+  letter-spacing: 0.1rem;
+}
+.counter-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  gap: 2rem;
+}
+
+.counter-item {
+  background: var(--bg-item);
+  padding: 3rem 1.5rem;
+  text-align: center;
+  border-radius: 1rem;
+  transition: all 0.5s ease-in-out;
+  transform: translateY(6rem);
+}
+.counter-img {
+  width: 7rem;
+  height: 7rem;
+  object-fit: contain;
+  filter: drop-shadow(0 0 0.2rem var(--bg-hero));
+}
+.counter-img:nth-child(1) {
+  width: 9rem;
+  height: auto;
+}
+.counter-item:hover {
+  background: var(--bg-hero);
+  cursor: pointer;
+  transition: all 0.5s ease-in-out;
+}
+.counter-item .counter {
+  font-size: 4.5rem;
+  color: transparent;
+  color: transparent;
+  letter-spacing: 0.5rem;
+  -webkit-text-stroke-width: 0.15rem;
+  -moz-text-stroke-width: 0.15rem;
+  -ms-text-stroke-width: 0.15rem;
+  -o-text-stroke-width: 0.15rem;
+  -webkit-text-stroke-color: var(--white);
+  -moz-text-stroke-color: var(--white);
+  -ms-text-stroke-color: var(--white);
+  -o-text-stroke-color: var(--white);
+}
+
+#box-inner-text {
+  font-size: 20px;
+  font-family: sans-serif;
 }
